# Assignment-1

webcam_ws/install/: local_setup.sh  setup.sh
webcam_ws/log/: latest_build
webcam_ws/src/cam2image_vm2ros/: CMakeLists.txt
webcam_ws/src/cam2image_vm2ros/config/: cam2image.yaml
webcam_ws/src/cam2image_vm2ros/include/: brightness.hpp
webcam_ws/src/cam2image_vm2ros/src/: brightness.cpp
webcam_ws/src/object_detection_pkg/: CMakeLists.txt
webcam_ws/src/object_detection_pkg/include/object_detection_pkg/: object_detection_node.hpp
webcam_ws/src/object_detection_pkg/src/: object_detection_node.cpp
webcam_ws/src/sequence_generator_pkg/: CMakeLists.txt  package.xml
webcam_ws/src/sequence_generator_pkg/include/sequence_generator_pkg/: sequence_generator_node.hpp
webcam_ws/src/sequence_generator_pkg/src/: sequence_generator_node.cpp
